<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B6B29C"
    tools:context=".MainMenuActivity">

    <Button
        android:id="@+id/addTask"
        android:layout_width="184dp"
        android:layout_height="49dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="477dp"
        android:text="@string/add_task"
        app:backgroundTint="#8F8A8A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/face"
        android:layout_width="185dp"
        android:layout_height="53dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="306dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="372dp"
        android:text="@string/face"
        app:backgroundTint="#8F8A8A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/schedule"
        android:layout_width="194dp"
        android:layout_height="50dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="397dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="284dp"
        android:text="@string/schedule"
        app:backgroundTint="#8F8A8A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="596dp"
        android:text="@string/menu_title"
        android:textSize="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/go_to_dashboard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="557dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="118dp"
        android:clickable="true"
        app:backgroundTint="#8F8A8A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

</androidx.constraintlayout.widget.ConstraintLayout>